2011-02-12  Peter O'Gorman  <peter@pogma.com>

	Install ltmain.sh without execute bit set.
	* Makefile.am: change install rule for ltmain.sh
	Reported by Křištof Želechovski.

2011-02-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	docs: fix copyright years in PDF version of the manual.
	* doc/libtool.texi: Fix copyright years.

2011-02-01  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>  (tiny change)

	Fix LD setting for 64-bit Solaris 2/x86.
	* libltdl/m4/libtool.m4 (_LT_ENABLE_LOCK) [*-*-solaris*]:
	Determine GNU ld options for 64-bit Solaris 2/x86.  Detect gld
	2.21 _sol2 emulations.

2011-01-27  Peter O'Gorman  <peter@pogma.com>

	Don't loop through wrapper script arguments unnecessarily.
	* libltdl/m4/ltmain.m4sh: Check that argv contains " --lt-"
	before looping to remove wrapper script targetted arguments.
	Performance regression reported by Dan McGee.

2011-01-20  Gerald Pfeifer  <gerald@pfeifer.com>  (tiny change)

	Remove support for FreeBSD 1.x.
	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS)
	(_LT_SYS_DYNAMIC_LINKER): Remove handling of freebsd1* which
	soon would incorrectly match FreeBSD 10.0.
	* NEWS, THANKS: Update.

2011-01-19  Peter O'Gorman  <peter@pogma.com>

	Don't let verbose linker messages influence test results.
	* libltdl/m4/libtool.m4 (_LT_REQUIRED_DARWIN_CHECKS): Ignore
	stderr during tests for -flag unless it contains "flag".
	* tests/darwin.at: Add test.
	Reported by Jeremy Huddleston and also by David Fang.

2011-01-09  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>  (tiny change)

	Fix relink mode to use absolute path if hardcode_minus_L.
	* libltdl/config/ltmain.m4sh (func_mode_link): Use absolute path
	when hardcoding with -L.

2011-01-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix $wl setting for Solaris Studio 12.2 f90 on GNU/Linux.
	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC) [linux]
	<lt_prog_compiler_wl>: Set to '-Qoption ld ' if we
	detect Sun Fortran version 8.4 or newer.
	Report by Terry Dontje.
